# OpenForge

./: .eslintrc.cjs  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  VISION.md  docker-compose.yml  electron-builder.json5  index.html  main.py  package-lock.json  package.json  podman-compose.yml  pyproject.toml  test_file_ops.py  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml
.github/skills/file-manager/: index.ts  skill.json
.github/src/: App.css  main.tsx
.github/src/components/: Disclaimer.tsx
.github/src/services/: aiManager.ts
dist-electron/: main.js  preload.mjs
electron/: electron-env.d.ts  main.ts  preload.ts
examples/: agent_loop.py  tool_calling.py
plugins/file_ops/: main.py  plugin.json
plugins/hello_world/: main.py  plugin.json
skills/: README.md  types.ts
skills/system-control/: index.ts  skill.json
skills/web-search/: index.ts  skill.json
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: Disclaimer.css  Disclaimer.tsx
src/gateway/: server.js
src/openforge/: __init__.py  __main__.py
src/openforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/services/: aiManager.ts
tests/: test_core_agent.py  test_core_tool_registry.py  test_plugin_manager.py  test_plugins.py  test_plugins_base.py  test_providers_models.py
website/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
website/prisma/: schema.prisma  seed.ts
(+47 files in other folders)
